--- a/autoindex/header.html
+++ b/autoindex/header.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <title>Index</title>
         <script type="text/javascript">
-            var title = ('Index - ' + window.location.pathname);
+            var title = ('Index - ' + window.location.pathname); //Loads up when this part is loaded 
             document.title = title;
         </script>
         <link rel="stylesheet" href="/autoindex/css/bootstrap.min.css"/>
@@ -75,4 +75,4 @@
         </div>
 
         <!--nginx json output, continues to footer.html-->
-        <div id="json-output">
+        <div id="json-output">   
